# sw360utils

./: README.md  pyproject.toml
src/sw360utils/: __init__.py  __main__.py  sw360.py
src/sw360utils/commands/: __init__.py  api_id.py  create_user.py  credentials.py
src/sw360utils/core/: cmdgroup.py  settings.py  utils.py
